@@ -2,6 +2,9 @@ Release 1.18 - ???
 
    * Add a parser for XPS (TIKA-2524).
 
+   * Fixed bug where TesseractOCRParser ignores configured ImageMagickPath,
+     and set rotation script to ignore Python warnings (TIKA-2509)
+
 Release 1.17 - December 8, 2017
 
   ***NOTE: THIS IS THE LAST VERSION OF TIKA THAT WILL RUN
